# tokenization

./: .gitignore  README.md  pyproject.toml
tokenization/: stemmorlemm.py  stopwords.py  teste-hifen-2.py  tokens.py  wordfrequency.py
